@@ -1,3 +1,12 @@
+2020-06-12  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	[graph] Simplify X11 driver.
+
+	* graph/x11/grx11.c (grX11Surface): Remove redundant fields.
+	(gr_x11_blitter_reset, gr_x11_surface_{resize,init}): Work directly
+	with `XImage'.
+	(gr_x11_surface_listen_event): Make sure resize succeeds.
+
 2020-06-11  David Turner  <david@freetype.org>
 
 	*/*: Include internal headers by their real names.
